[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

nym-sdk = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
nym-sphinx-addressing = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
nym-sphinx-anonymous-replies = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
protoc-rust-grpc = "0.8.3"
protobuf = "3.4.0"

[build-dependencies]
tonic-build = "0.11"
